--- a/src/bib/Literatur.bib
+++ b/src/bib/Literatur.bib
@@ -191,3 +191,20 @@ month={Aug},}
   year={2011},
   publisher={Elsevier}
 }
+
+@phdthesis{aich2010study,
+  title={Study of Kalman, Extended Kalman and Unscented Kalman Filter (An Approach to Design a Power System)},
+  author={Aich, SR and Madhumita, M},
+  year={2010}
+}
+
+
+@article{bishop2001introduction,
+  title={An introduction to the kalman filter},
+  author={Bishop, Gary and Welch, Greg},
+  journal={Proc of SIGGRAPH, Course},
+  volume={8},
+  number={27599-23175},
+  pages={41},
+  year={2001}
+}
